--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  background: #081b29;
+  overflow: hidden;
 }
 
 .wrapper {
@@ -22,7 +24,6 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: purple;
   border-radius: 50%;
 }
 
@@ -35,5 +36,7 @@ body {
 
 .number-hours span p {
   font-size: 52px;
+  color: #0ef;
+  text-shadow: 0 0 10px #0ef;
   transform: rotate(calc(var(--index) * -30deg));
 }
