--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ body {
   width: 500px;
   height: 500px;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .number-hours {
@@ -43,6 +46,14 @@ body {
 
 .hands-box {
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hands-box .hand {
+  position: absolute;
+  border-radius: 50%;
 }
 
 .hands-box .hours {
