--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ body {
 .hands-box .hand {
   position: absolute;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
 }
 
 .hands-box .hand i {
@@ -79,8 +81,22 @@ body {
   border: 2px solid yellow;
 }
 
+.hands-box .minutes i {
+  width: 8px;
+  /* half of parent height */
+  height: 225px;
+  background: yellow;
+}
+
 .hands-box .seconds {
   width: 480px;
   height: 480px;
   border: 2px solid white;
+}
+
+.hands-box .seconds i {
+  width: 4px;
+  /* half of parent height */
+  height: 240px;
+  background: white;
 }
