--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body {
   /* half of parent height */
   height: 160px;
   background: red;
+  transform: rotate(30deg);
 }
 
 .hands-box .minutes {
