--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
 
 /* center dot bottom */
 .hands-box .minutes::before {
-  content: " ";
+  content: "";
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -106,6 +106,19 @@ body {
 .hands-box .seconds {
   width: 480px;
   height: 480px;
+}
+
+/* center dot top */
+.hands-box .seconds::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 2px rgba(0 0 0 0.5);
 }
 
 .hands-box .seconds i {
