--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
 .hands-box .hours {
   width: 320px;
   height: 320px;
+  transform: rotate(40deg);
 }
 
 .hands-box .hours i {
@@ -74,12 +75,12 @@ body {
   /* half of parent height */
   height: 160px;
   background: red;
-  transform: rotate(40deg);
 }
 
 .hands-box .minutes {
   width: 450px;
   height: 450px;
+  transform: rotate(230deg);
 }
 
 /* center dot bottom */
@@ -100,12 +101,12 @@ body {
   /* half of parent height */
   height: 225px;
   background: yellow;
-  transform: rotate(230deg);
 }
 
 .hands-box .seconds {
   width: 480px;
   height: 480px;
+  transform: rotate(160deg);
 }
 
 /* center dot top */
@@ -124,7 +125,6 @@ body {
 .hands-box .seconds i {
   width: 4px;
   /* half of parent height */
-  height: 240px;
+  height: calc(240px + 70px);
   background: white;
-  transform: rotate(180deg);
 }
