--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
   display: inline-block;
   transform-origin: bottom;
   border-radius: 50%;
+  box-shadow: 0 0 10px #0ef;
 }
 
 .hands-box .hours {
@@ -74,7 +75,7 @@ body {
   width: 8px;
   /* half of parent height */
   height: 160px;
-  background: red;
+  background: #0ef;
 }
 
 .hands-box .minutes {
@@ -100,7 +101,7 @@ body {
   width: 8px;
   /* half of parent height */
   height: 225px;
-  background: yellow;
+  background: #0ef;
 }
 
 .hands-box .seconds {
@@ -127,4 +128,5 @@ body {
   /* half of parent height */
   height: calc(240px + 70px);
   background: white;
+  box-shadow: none;
 }
