updated style for class bar-seconds

--- a/style.css
+++ b/style.css
@@ -46,6 +46,16 @@ body {
   background: #0ef;
 }
 
+/* 5n = every multiple of 5 */
+.bar-seconds span:nth-child(5n) p {
+  background: white;
+  width: 6px;
+  height: 22px;
+  transform: translateY(-3px);
+  border-radius: 2px;
+  box-shadow: 0 0 5px#0ef;
+}
+
 .number-hours span {
   position: absolute;
   transform: rotate(calc(var(--index) * 30deg));
